Fix alignment and width issues in first section

--- a/style.css
+++ b/style.css
@@ -24,13 +24,15 @@ a,
 
 .first-section {
     flex-direction: column;
+    align-items: center;
 }
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 16px;
+    width: 1000px;
 }
 
 .header-logo {
@@ -41,14 +43,17 @@ a,
 
 .presentation {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding: 48px;
+    width: 1000px;
 }
 
 .presentation-text {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    flex: 1 1 auto;
+    width: 500px;
 }
 
 .main-title {
@@ -69,6 +74,7 @@ a,
 .presentation-image {
     background-color:lightslategrey;
     flex: 1 1 auto;
+    width: 500px;
 }
 
 .footer {
